--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(Qstatistic)
 export(mr_sens_beta)
 export(mr_sens_h2)
 export(mr_sens_z)
+export(mr_sens_z_normalized)
 export(permute_core_instrument)
 export(plot_mr_sens)
